--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ readme = "README.md"
 gtk = { version = "0.18.2", features = ["v3_24"] }
 gio = "0.21"
 glib = { version = "0.21", features = ["v2_80"] }
+glob = "0.3"
 dirs = "6.0"
 chrono = "0.4.42"
 directories = "6.0"
